--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
               </button>
             </div>
           </div>
+          <div class="main-left-dessert-itself-information">
+            <h4 class="main-left-dessert-itself-information-category">Waffle</h4>
+            <h3 class="main-left-dessert-itself-information-name">Waffle with Berries</h3>
+            <h3 class="main-left-dessert-itself-information-price">$6.50</h3>
+          </div>
         </div>
       </div>
     </div>
