--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Bakery Shop</title>
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -11,44 +11,6 @@
     <div class="main-left">
       <h1 class="main-left-header">Desserts</h1>
       <div class="main-left-desserts">
-        <div class="main-left-dessert-itself">
-          <div class="main-left-dessert-itself-image">
-            <img src="./assets/images/image-baklava-desktop.jpg" alt="dessert name" class="main-left-dessert-itself-image-itself">
-          </div>
-          <div class="main-left-dessert-itself-buttons">
-            <button class="main-left-dessert-itself-button-add-to-cart" type="button">
-              <svg class="main-left-dessert-itself-button-add-to-cart-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
-                <path d="M8 16L16.7201 15.2733C19.4486 15.046 20.0611 14.45 20.3635 11.7289L21 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-                <path d="M6 6H6.5M22 6H19.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-                <path d="M9.5 6H16.5M13 9.5V2.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-                <circle cx="6" cy="20" r="2" stroke="currentColor" stroke-width="1.5" />
-                <circle cx="17" cy="20" r="2" stroke="currentColor" stroke-width="1.5" />
-                <path d="M8 20L15 20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-                <path d="M2 2H2.966C3.91068 2 4.73414 2.62459 4.96326 3.51493L7.93852 15.0765C8.08887 15.6608 7.9602 16.2797 7.58824 16.7616L6.63213 18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-              </svg>
-              <h4 class="main-left-dessert-itself-button-add-to-cart-text">Add to Cart</h4>
-            </button>
-            <div class="main-left-dessert-itself-decrement-increment-buttons">
-              <button type="button" class="main-left-dessert-itself-decrement-button-itself">
-                <svg class="main-left-dessert-itself-decrement-button-itself-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
-                  <path d="M20 12L4 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                </svg>
-              </button>
-              <span class="main-left-dessert-itself-decrement-increment-buttons-text">0</span>
-              <button type="button" class="main-left-dessert-itself-increment-button-itself">
-                <svg class="main-left-dessert-itself-increment-button-itself-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
-                  <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                </svg>
-              </button>
-            </div>
-          </div>
-          <div class="main-left-dessert-itself-information">
-            <h4 class="main-left-dessert-itself-information-category">Waffle</h4>
-            <h3 class="main-left-dessert-itself-information-name">Waffle with Berries</h3>
-            <h3 class="main-left-dessert-itself-information-price">$6.50</h3>
-          </div>
-        </div>
       </div>
     </div>
     <div class="main-right"></div>
