--- a/index.html
+++ b/index.html
@@ -13,7 +13,25 @@
       <div class="main-left-desserts">
       </div>
     </div>
-    <div class="main-right"></div>
+    <div class="main-right">
+      <div class="main-right-cart">
+        <h2 class="main-right-cart-header">Your Cart (<span class="main-left-header-inner">0</span>)</h2>
+        <div class="main-right-cart-empty">
+          <img class="main-right-cart-empty-image" src="./assets/images/illustration-empty-cart.svg" alt="Empty cart svg">
+          <p class="main-right-cart-empty-paragraph">Your added items will appear here</p>
+        </div>
+
+        <div class="main-right-cart-itself">
+          <div class="main-right-cart-itself-ordered-desserts">
+            <div class="main-right-cart-itself-ordered-dessert-itself">
+              <div class="main-right-cart-itself-ordered-dessert-itself-left"></div>
+              <button type="button" class="main-right-cart-itself-ordered-dessert-itself-right"></button>
+            </div>
+          </div>
+          <!-- <h4 class="main-right-cart-itself-order-total">Order Total <span class="main-right-cart-itself-order-total-inner">$46.50</span></h4> -->
+        </div>
+      </div>
+    </div>
   </main>
   
   <script src="./script.js"></script>
