--- a/index.html
+++ b/index.html
@@ -24,8 +24,19 @@
         <div class="main-right-cart-itself">
           <div class="main-right-cart-itself-ordered-desserts">
             <div class="main-right-cart-itself-ordered-dessert-itself">
-              <div class="main-right-cart-itself-ordered-dessert-itself-left"></div>
-              <button type="button" class="main-right-cart-itself-ordered-dessert-itself-right"></button>
+              <div class="main-right-cart-itself-ordered-dessert-itself-left">
+                <h4 class="main-right-cart-itself-ordered-dessert-itself-left-top">Classic Tiramisu</h4>
+                <div class="main-right-cart-itself-ordered-dessert-itself-left-bottom">
+                  <h4 class="main-right-cart-itself-ordered-dessert-itself-left-bottom-how-many">2x</h4>
+                  <h4 class="main-right-cart-itself-ordered-dessert-itself-left-bottom-price">$5.50</h4>
+                  <h4 class="main-right-cart-itself-ordered-dessert-itself-left-bottom-overall-price">$11.0</h4>
+                </div>
+              </div>
+              <button title="Remove from cart" type="button" class="main-right-cart-itself-ordered-dessert-itself-right">
+                <svg class="main-right-cart-itself-ordered-dessert-itself-right-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
+                  <path d="M19.0005 4.99988L5.00049 18.9999M5.00049 4.99988L19.0005 18.9999" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+              </button>
             </div>
           </div>
           <!-- <h4 class="main-right-cart-itself-order-total">Order Total <span class="main-right-cart-itself-order-total-inner">$46.50</span></h4> -->
