--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </svg>
               </button>
             </div>
+            <hr class="main-right-cart-itself-ordered-desserts-divider">
           </div>
           <!-- <h4 class="main-right-cart-itself-order-total">Order Total <span class="main-right-cart-itself-order-total-inner">$46.50</span></h4> -->
         </div>
