--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="main-right-cart-itself">
           <div class="main-right-cart-itself-ordered-desserts">
-            <div class="main-right-cart-itself-ordered-dessert-itself">
+            <!-- <div class="main-right-cart-itself-ordered-dessert-itself">
               <div class="main-right-cart-itself-ordered-dessert-itself-left">
                 <h4 class="main-right-cart-itself-ordered-dessert-itself-left-top">Classic Tiramisu</h4>
                 <div class="main-right-cart-itself-ordered-dessert-itself-left-bottom">
@@ -38,9 +38,9 @@
                 </svg>
               </button>
             </div>
-            <hr class="main-right-cart-itself-ordered-desserts-divider">
+            <hr class="main-right-cart-itself-ordered-desserts-divider"> -->
           </div>
-          <h4 class="main-right-cart-itself-order-total">Order Total <span class="main-right-cart-itself-order-total-inner">$46.50</span></h4>
+          <h4 class="main-right-cart-itself-order-total">Order Total <span class="main-right-cart-itself-order-total-inner">$0</span></h4>
           <div class="main-right-cart-itself-carbon">
             <svg class="main-right-cart-itself-carbon-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff" fill="none">
               <path d="M12 22V9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
